<resources>
    <string name="app_name">Live Polls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">---------- OR ----------</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="live_polls">Live Polls</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>