<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_poll_24" />

        <TextView
            android:id="@+id/lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lakkireddy_regular"
            android:text="@string/live_polls"
            android:textAlignment="center"
            android:textColor="#FFAB2CC0"
            android:textSize="38sp" />

        <EditText
            android:id="@+id/etUname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lable"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/edittext_corner"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="7dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="7dp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_500" />

        <EditText
            android:id="@+id/etPassMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/etUname"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_corner"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="7dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_500" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassMain"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/l1"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/button_round_corner"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="60dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/RegLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtor"
            android:layout_marginTop="22dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/button_white_round_corner"
            android:text="@string/sign_up"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>